results/classifier/118/graphic/2038
graphic: 0.953
device: 0.829
PID: 0.825
ppc: 0.814
files: 0.641
debug: 0.616
vnc: 0.607
semantic: 0.580
performance: 0.553
TCG: 0.527
arm: 0.511
network: 0.506
architecture: 0.498
register: 0.444
peripherals: 0.443
user-level: 0.420
i386: 0.404
risc-v: 0.370
socket: 0.359
VMM: 0.319
hypervisor: 0.303
x86: 0.297
mistranslation: 0.255
kernel: 0.255
permissions: 0.250
boot: 0.239
KVM: 0.223
virtual: 0.163
assembly: 0.029

simpletrace.py does nothing, and syntax error when called from bash script
Description of problem:
The simpletrace python script appears to do nothing when I run it as above. 

It appears to run (but do nothing) when called from my terminal but there is also a syntax error when I run it from the bash script above.

```
SyntaxError: invalid syntax
  File "<fstring>", line 1
    (pid=)
        ^
```

I think this syntax error is caused by the line `print(f'{event.name} {delta_ns / 1000:0.3f} {pid=} ' + ' '.join(fields))`
Additional information:

